@@ -1,6 +1,9 @@
 Version 5.1.3 - 
   - Fixed problem with using a stored procedure that takes a parameter as a select routine
     for a TableAdapter wizard. (Bug #29098)
+  - Fixed problem with creating users using hashed passwords when machineKey is set
+    to AutoGenerate.  We now correctly throw an exception if you are requesting
+    encrypted passwords but it works ok for hashed passwords. (Bug #29235)
 
 Version 5.1.2 - 6/12/2007
   - Fixed integration with the Website Administration Tool.  Before this fix, the test link
